Corrected too large of margin

--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ nav.external-links img:hover {
 }
 
 nav.internal-links {
-    margin: auto;
+    margin: 0 auto;
     max-width: 30rem;
     text-align: center;
     width: 100%;
